--- a/node/package.json
+++ b/node/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^2.2.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
