--- a/site/.env
+++ b/site/.env
@@ -4,3 +4,6 @@ NEXT_PUBLIC_AUTH_FACEBOOK_ID=
 NEXT_PUBLIC_AUTH_FACEBOOK_SECRET=
 NEXT_PUBLIC_AUTH_APPLE_ID=
 NEXT_PUBLIC_AUTH_APPLE_SECRET=
+
+JWT_SECRET="kdiU$28Fs!9shF&2xZpD3Q#1gLx@R7TkWzPq"
+NEXT_PUBLIC_API_URL=http://localhost:8080
